Changed title name

--- a/series/index.html
+++ b/series/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Series | My Github Blog</title>
+<title>Series | hwkim301&#39;s blog</title>
 <meta name="keywords" content="">
 <meta name="description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
 <meta name="author" content="Theme PaperMod">
@@ -57,7 +57,7 @@
 
     </style>
 </noscript><meta property="og:url" content="https://hwkim301.github.io/series/">
-  <meta property="og:site_name" content="My Github Blog">
+  <meta property="og:site_name" content="hwkim301&#39;s blog">
   <meta property="og:title" content="Series">
   <meta property="og:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
   <meta property="og:locale" content="en">
@@ -85,7 +85,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://hwkim301.github.io/" accesskey="h" title="My Github Blog (Alt + H)">My Github Blog</a>
+            <a href="https://hwkim301.github.io/" accesskey="h" title="hwkim301&#39;s blog (Alt + H)">hwkim301&#39;s blog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -149,7 +149,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="https://hwkim301.github.io/">My Github Blog</a></span> · 
+        <span>&copy; 2025 <a href="https://hwkim301.github.io/">hwkim301&#39;s blog</a></span> · 
 
     <span>
         Powered by
