--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>My Github Blog</title>
+<title>hwkim301&#39;s blog</title>
 
 <meta name="description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
 <meta name="author" content="Theme PaperMod">
@@ -59,22 +59,22 @@
 
     </style>
 </noscript><meta property="og:url" content="https://hwkim301.github.io/">
-  <meta property="og:site_name" content="My Github Blog">
-  <meta property="og:title" content="My Github Blog">
+  <meta property="og:site_name" content="hwkim301&#39;s blog">
+  <meta property="og:title" content="hwkim301&#39;s blog">
   <meta property="og:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
       <meta property="og:image" content="https://hwkim301.github.io/images/papermod-cover.png">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="https://hwkim301.github.io/images/papermod-cover.png">
-<meta name="twitter:title" content="My Github Blog">
+<meta name="twitter:title" content="hwkim301&#39;s blog">
 <meta name="twitter:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "My Github Blog",
+  "name": "hwkim301's blog",
   "url": "https://hwkim301.github.io/",
   "description": "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod",
   "logo": "https://hwkim301.github.io/favicon.ico",
@@ -100,7 +100,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://hwkim301.github.io/" accesskey="h" title="My Github Blog (Alt + H)">My Github Blog</a>
+            <a href="https://hwkim301.github.io/" accesskey="h" title="hwkim301&#39;s blog (Alt + H)">hwkim301&#39;s blog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -210,7 +210,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="https://hwkim301.github.io/">My Github Blog</a></span> · 
+        <span>&copy; 2025 <a href="https://hwkim301.github.io/">hwkim301&#39;s blog</a></span> · 
 
     <span>
         Powered by
